--- a/src/App.css
+++ b/src/App.css
@@ -461,7 +461,7 @@ button{
     padding: 15px 25px 15px 12px;
     align-items: center;
 }
-.active{
+.activeCategory{
     background-image: url(https://web.grandcandy.am/static/media/rectangle.88d1c97f.png);
     background-size: contain;
     background-position: 112%;
